--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -27,9 +27,15 @@
       <select id="categoria" name="categoria" required aria-required="true">
         <option value="todas">Todas</option>
         <option value="eletronicos">Eletrônicos</option>
-        <option value="roupas">Roupas</option>
-        <option value="acessorios">Acessórios</option>
-        <option value="pet-shop">Pet Shop</option>
+        <option value="moda">Moda</option>
+        <option value="fitness">Fitness</option>
+        <option value="casa">Casa e Decoração</option>
+        <option value="beleza">Beleza</option>
+        <option value="esportes">Esportes</option>
+        <option value="livros">Livros</option>
+        <option value="infantil">Infantil</option>
+        <option value="Celulares">Celulares</option>
+        <option value="Eletrodomésticos">Eletrodomésticos</option>
       </select>
 
       <label for="loja">Loja</label>
@@ -39,7 +45,7 @@
         <option value="shein">Shein</option>
         <option value="shopee">Shopee</option>
         <option value="magalu">Magalu</option>
-        <option value="mercado-livre">Mercado Livre</option>
+        <option value="mercadolivre">Mercado Livre</option>
         <option value="alibaba">Alibaba</option>
       </select>
 
