--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -60,6 +60,78 @@
     <div id="error-message"></div>
     <div id="success-message"></div>
   </div>
-  <script src="admin.js"></script>
+
+  <script>
+    const API_URL = 'https://minha-api-produtos.onrender.com';
+
+    async function cadastrarProduto(event) {
+      event.preventDefault();
+      const form = document.getElementById('cadastro-produto');
+      const errorMessage = document.getElementById('error-message');
+      const successMessage = document.getElementById('success-message');
+
+      if (!form || !errorMessage || !successMessage) {
+        console.error('Elementos do formulário não encontrados');
+        errorMessage.textContent = 'Erro interno. Tente novamente.';
+        errorMessage.style.display = 'block';
+        return;
+      }
+
+      const formData = new FormData(form);
+      const imagens = formData.getAll('imagens');
+      if (imagens.length > 5) {
+        errorMessage.textContent = 'Máximo de 5 imagens permitido.';
+        errorMessage.style.display = 'block';
+        successMessage.style.display = 'none';
+        return;
+      }
+      if (imagens.length === 0) {
+        errorMessage.textContent = 'Selecione pelo menos uma imagem.';
+        errorMessage.style.display = 'block';
+        successMessage.style.display = 'none';
+        return;
+      }
+
+      try {
+        errorMessage.style.display = 'none';
+        successMessage.style.display = 'none';
+
+        console.log('Enviando para:', `${API_URL}/api/produtos`);
+        const response = await fetch(`${API_URL}/api/produtos`, {
+          method: 'POST',
+          body: formData
+        });
+
+        console.log('Resposta:', response.status);
+        if (!response.ok) {
+          const text = await response.text();
+          console.log('Erro da API:', text);
+          throw new Error(`Erro ${response.status}: ${text}`);
+        }
+
+        successMessage.textContent = 'Produto cadastrado! Redirecionando...';
+        successMessage.style.display = 'block';
+        form.reset();
+        setTimeout(() => {
+          window.location.href = '/index.html';
+        }, 2000);
+      } catch (error) {
+        console.error('Erro:', error);
+        errorMessage.textContent = `Erro ao cadastrar: ${error.message}`;
+        errorMessage.style.display = 'block';
+        successMessage.style.display = 'none';
+      }
+    }
+
+    document.addEventListener('DOMContentLoaded', () => {
+      console.log('Script do admin carregado');
+      const form = document.getElementById('cadastro-produto');
+      if (form) {
+        form.addEventListener('submit', cadastrarProduto);
+      } else {
+        console.error('Formulário não encontrado');
+      }
+    });
+  </script>
 </body>
 </html>
