--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -5,18 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Painel Administrativo - Cadastro de Produtos</title>
   <style>
-    body { font-family: Arial, sans-serif; padding: 20px; }
+    body { font-family: 'Roboto', sans-serif; padding: 20px; background-color: #fff; color: #333; }
     .form-container, .produtos-container { max-width: 800px; margin: 0 auto 20px; }
     label { display: block; margin: 10px 0 5px; }
-    input, select, textarea { width: 100%; padding: 8px; margin-bottom: 10px; box-sizing: border-box; }
-    button { padding: 8px 16px; background: #28a745; color: white; border: none; cursor: pointer; }
+    input, select { width: 100%; padding: 8px; margin-bottom: 10px; box-sizing: border-box; border: 1px solid #e0e0e0; border-radius: 4px; }
+    button { padding: 8px 16px; background: #28a745; color: white; border: none; cursor: pointer; border-radius: 4px; }
     button:hover { background: #218838; }
-    #error-message, #success-message { display: none; margin-top: 10px; padding: 10px; }
+    #error-message, #success-message { display: none; margin-top: 10px; padding: 10px; border-radius: 4px; }
     #error-message { background: #f8d7da; color: #721c24; }
     #success-message { background: #d4edda; color: #155724; }
     .produtos-table { width: 100%; border-collapse: collapse; margin-top: 20px; }
-    .produtos-table th, .produtos-table td { border: 1px solid #ddd; padding: 8px; text-align: left; }
-    .produtos-table th { background: #f2f2f2; }
+    .produtos-table th, .produtos-table td { border: 1px solid #e0e0e0; padding: 8px; text-align: left; font-size: 14px; }
+    .produtos-table th { background: #f2f2f2; color: #444; }
     .produto-imagem { width: 50px; height: 50px; object-fit: contain; }
     .btn-editar { background: #007bff; }
     .btn-editar:hover { background: #0056b3; }
@@ -34,6 +34,7 @@
       <label for="categoria">Categoria</label>
       <select id="categoria" name="categoria" required aria-required="true">
         <option value="todas">Todas</option>
+        <option value="pet">Pet</option>
         <option value="eletronicos">Eletrônicos</option>
         <option value="moda">Moda</option>
         <option value="fitness">Fitness</option>
@@ -170,15 +171,12 @@
           throw new Error(`Erro ${response.status}`);
         }
 
-        successMessage.textContent = produtoId ? 'Produto atualizado com sucesso!' : 'Produto cadastrado! Redirecionando...';
+        successMessage.textContent = produtoId ? 'Produto atualizado com sucesso!' : 'Produto cadastrado com sucesso!';
         successMessage.style.display = 'block';
         form.reset();
         submitBtn.textContent = 'Cadastrar Produto';
         document.getElementById('produto-id').value = '';
         carregarProdutos();
-        if (!produtoId) {
-          setTimeout(() => { window.location.href = '/index.html'; }, 2000);
-        }
       } catch (error) {
         console.error('Erro:', error);
         errorMessage.textContent = `Erro ao ${produtoId ? 'atualizar' : 'cadastrar'}: ${error.message}`;
