--- a/index.html
+++ b/index.html
@@ -15,7 +15,185 @@
     <title>Centro de Compras - Ofertas do Dia</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    
+    <style>
+        /* Estilos mantidos como no código original */
+        .modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.8);
+            z-index: 1000;
+            justify-content: center;
+            align-items: center;
+        }
+        .modal-content {
+            position: relative;
+            max-width: 90%;
+            max-height: 90%;
+            width: auto;
+            height: auto;
+        }
+        .modal-content .carrossel-imagens {
+            display: flex;
+            overflow: hidden;
+            width: 100%;
+            height: 100%;
+        }
+        .modal-content .carrossel-imagens img {
+            width: 100%;
+            height: auto;
+            max-width: 800px;
+            max-height: 600px;
+            object-fit: contain;
+            flex: 0 0 100%;
+            transition: transform 0.3s ease;
+        }
+        .modal-close {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            background: #ff6200;
+            color: #fff;
+            border: none;
+            padding: 8px 12px;
+            border-radius: 50%;
+            cursor: pointer;
+            font-size: 16px;
+        }
+        .carrossel-prev,
+        .carrossel-next {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            background: rgba(0, 0, 0, 0.5);
+            color: #fff;
+            border: none;
+            padding: 10px;
+            cursor: pointer;
+            font-size: 18px;
+            border-radius: 4px;
+            display: none;
+        }
+        .carrossel-prev.visible,
+        .carrossel-next.visible {
+            display: block;
+        }
+        .carrossel-prev { left: 10px; }
+        .carrossel-next { right: 10px; }
+        .carrossel-dots {
+            position: absolute;
+            bottom: 10px;
+            width: 100%;
+            text-align: center;
+        }
+        .carrossel-dot {
+            display: inline-block;
+            width: 10px;
+            height: 10px;
+            background: #ccc;
+            border-radius: 50%;
+            margin: 0 5px;
+            cursor: pointer;
+        }
+        .carrossel-dot.ativo { background: #ff6200; }
+        .modal-error {
+            color: red;
+            text-align: center;
+            margin-top: 10px;
+            font-size: 14px;
+        }
+        .error-message {
+            color: red;
+            text-align: center;
+            margin-top: 10px;
+        }
+        .tarja-preco {
+            display: inline-block;
+            background: #ff6200;
+            color: white;
+            padding: 6px 10px;
+            margin: 8px 0;
+            border-radius: 4px;
+            text-decoration: none;
+            font-weight: bold;
+            font-size: 12px;
+        }
+        .tarja-preco:hover { background: #e55a00; }
+        #load-more {
+            display: none;
+            margin: 20px auto;
+            padding: 10px 20px;
+            background: #ff6200;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+        #load-more:hover { background: #e55a00; }
+        .produto-card {
+            transition: transform 0.2s;
+            background: white;
+            border-radius: 8px;
+            padding: 10px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            max-height: 300px;
+        }
+        .produto-card:hover { transform: translateY(-5px); }
+        .produto-card span {
+            font-size: 14px;
+            display: block;
+            margin: 5px 0;
+        }
+        .carrossel {
+            position: relative;
+            width: 100%;
+            max-height: 150px;
+            overflow: hidden;
+        }
+        .carrossel-imagens {
+            display: flex;
+            width: 100%;
+            height: 100%;
+        }
+        .carrossel-imagens img {
+            width: 100%;
+            height: 150px;
+            object-fit: cover;
+            flex: 0 0 100%;
+            transition: transform 0.3s ease;
+        }
+        .grid-produtos {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 15px;
+        }
+        @media (max-width: 600px) {
+            .grid-produtos {
+                grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+            }
+            .produto-card {
+                max-height: 250px;
+            }
+            .carrossel-imagens img {
+                height: 120px;
+            }
+            .tarja-preco {
+                font-size: 10px;
+                padding: 5px 8px;
+            }
+            .produto-card span {
+                font-size: 12px;
+            }
+            .modal-content .carrossel-imagens img {
+                max-width: 100%;
+                max-height: 400px;
+            }
+        }
+    </style>
 </head>
 <body>
     <header class="site-header">
